<resources>
    <string name="app_name">weather app</string>
    <string name="city_name">city name</string>
    <string name="name_to_day">ToDay Is :</string>
    <string name="currentState">Cloudy</string>
    <string name="first_day">Sunday</string>
    <string name="second_day">Monday</string>
    <string name="third_day">Tuesday</string>
    <string name="fourth_day">Wednesday</string>
    <string name="fifth_day">Thursday</string>
    <string name="sixth_day">Friday</string>
    <string name="seventh_day">Shabath</string>
</resources>